[package]
name = "guest_cmd"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.11"
lazy_static = "1"
libc = "*"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0"

#don't forgot .cargo/config for linker configs!
